Partial implementation - Move response creation responsibility to controller